# trendscope

./: .gitignore  CLAUDE.md  DEVELOPMENT.md  LICENSE  README.md  compose.yaml
.github/workflows/: build-image.yaml
.serena/: project.yml
backend/: .dockerignore  Dockerfile  pyproject.toml  start-dev.sh
backend/scripts/: batch_analysis.py
backend/src/trendscope_backend/: __init__.py
backend/src/trendscope_backend/analysis/: __init__.py
backend/src/trendscope_backend/analysis/fundamental/: __init__.py
backend/src/trendscope_backend/analysis/ml/: __init__.py  ml_predictions.py
backend/src/trendscope_backend/analysis/patterns/: __init__.py  pattern_recognition.py
backend/src/trendscope_backend/analysis/scoring/: __init__.py  integrated_scoring.py
backend/src/trendscope_backend/analysis/technical/: __init__.py  indicators.py
backend/src/trendscope_backend/analysis/volatility/: __init__.py  volatility_analysis.py
backend/src/trendscope_backend/api/: __init__.py  analysis.py  comprehensive_analysis.py  historical_data.py  main.py
backend/src/trendscope_backend/data/: __init__.py  models.py  stock_data.py
backend/src/trendscope_backend/utils/: config.py  date.py  logging.py  validation.py
backend/tests/: test_analysis_ml_ml_predictions.py  test_analysis_patterns_pattern_recognition.py  test_analysis_scoring_integrated.py  test_analysis_technical_indicators.py  test_analysis_volatility_volatility_analysis.py  test_api_analysis.py  test_api_comprehensive_analysis.py  test_api_main.py  test_data_models.py  test_data_stock_data.py  test_utils_config.py  test_utils_date.py  test_utils_logging.py  test_utils_validation.py
discord-bot/: Dockerfile  README.md  go.mod
discord-bot/cmd/discord-bot/: integration_test.go  main.go  workflow_test.go
discord-bot/configs/: config.go  config_test.go
discord-bot/internal/worker/: pool.go
discord-bot/pkg/api/: client.go
discord-bot/pkg/csv/: reader.go
discord-bot/pkg/database/: adapter.go  adapter_test.go  connection.go  connection_test.go  models.go  models_test.go  repository.go  repository_test.go  service.go  service_test.go
discord-bot/pkg/discord/: webhook.go
discord-bot/pkg/scheduler/: cron.go
frontend/: .dockerignore  Dockerfile  biome.json  next.config.mjs  package.json  tailwind.config.js  tsconfig.json
frontend/src/app/: globals.css  layout.tsx  page.tsx  providers.tsx
frontend/src/components/: analysis-results.tsx  hero-section.tsx  stock-analysis-form.tsx
frontend/src/components/charts/: chart-container.tsx  data-adapters.ts  index.ts  pattern-chart.tsx  price-chart.tsx  technical-indicator-chart.tsx  types.ts  volatility-chart.tsx
frontend/src/components/ui/: badge.tsx  button.tsx  card.tsx  input.tsx  progress.tsx  tooltip.tsx
frontend/src/hooks/: use-analysis.ts  use-historical-data.ts
frontend/src/lib/: api.ts  error-handling.tsx  metrics-explanations.ts  utils.ts
frontend/src/types/: analysis.ts
k8s/: 01-namespace.yaml  02-configmap.yaml  03-backend-deployment.yaml  04-frontend-deployment.yaml  05-backend-service.yaml  06-frontend-service.yaml  07-cilium-l2-announcement.yaml  08-cilium-loadbalancer-ippool.yaml  09-discord-bot-configmap.yaml  10-discord-bot-cronjob.yaml  10-discord-bot-secret.yaml  11-discord-bot-cronjob.yaml  11-discord-bot-database-pvc.yaml  11-shared-database-pvc.yaml  README.md
monthlyswing/: CLAUDE.md
monthlyswing/backend/: README.md  main.py  pyproject.toml
monthlyswing/backend/src/monthlyswing_backend/: __init__.py  exceptions.py
monthlyswing/backend/src/monthlyswing_backend/analysis/: __init__.py  monthly_trend.py  swing_signals.py
monthlyswing/backend/src/monthlyswing_backend/api/: __init__.py  main.py
monthlyswing/backend/src/monthlyswing_backend/models/: __init__.py  swing_models.py
monthlyswing/backend/src/monthlyswing_backend/services/: __init__.py  monthly_swing_service.py
monthlyswing/backend/src/monthlyswing_backend/utils/: error_handling.py  performance.py
monthlyswing/backend/tests/: __init__.py  test_analysis_monthly_trend.py  test_analysis_swing_signals.py  test_api_main.py  test_api_monthly_swing.py  test_error_handling.py  test_performance.py
monthlyswing/frontend/: bunfig.toml  eslint.config.js  next.config.js  tailwind.config.js  tsconfig.json
monthlyswing/frontend/.next/: app-build-manifest.json  build-manifest.json  next-server.js.nft.json  required-server-files.json  routes-manifest.json  trace
monthlyswing/frontend/.next/cache/: .previewinfo  .rscinfo
monthlyswing/frontend/.next/server/: middleware-build-manifest.js  server-reference-manifest.json
monthlyswing/frontend/.next/standalone/: package.json  server.js
monthlyswing/frontend/src/__tests__/: setup.ts
stock-db-batch/: Dockerfile  README.md  main.py  pyproject.toml
stock-db-batch/k8s/: configmap.yaml  cronjob.yaml  job.yaml  kustomization.yaml  monitoring.yaml  namespace.yaml  pvc.yaml  rbac.yaml  sample-stocks.csv  secret.yaml
stock-db-batch/src/stock_batch/: __init__.py  main_batch_application.py
stock-db-batch/src/stock_batch/database/: connection.py  migration.py  thread_safe_connection.py
stock-db-batch/src/stock_batch/models/: __init__.py  company.py
stock-db-batch/src/stock_batch/services/: __init__.py  async_batch_processor.py  csv_reader.py  database_service.py  differential_processor.py  stock_fetcher.py  thread_safe_database_service.py  translation.py
stock-db-batch/tests/: test_database_connection.py  test_database_migration.py  test_main_batch_application.py  test_models_company.py  test_resource_monitoring.py  test_services_csv_reader.py  test_services_database_service.py  test_services_differential_processor.py  test_services_stock_fetcher.py  test_services_translation.py  test_thread_safe_connection.py  test_thread_safe_database_service.py  test_thread_safe_differential_processor.py  test_thread_safe_integration.py
stock-db-batch/tests/services/: test_async_batch_processor.py  test_async_main_integration.py  test_async_pipeline_integration.py  test_async_stock_fetcher.py  test_async_translation.py
(+46 files in other folders)
